--- a/Uppgift_14/Uppgift_14.xaml
+++ b/Uppgift_14/Uppgift_14.xaml
@@ -9,7 +9,7 @@
     <Grid>
         <Label Content="Label" HorizontalAlignment="Left" Margin="73,70,0,0" VerticalAlignment="Top"/>
         <TextBox x:Name="NumbersInput" HorizontalAlignment="Left" Margin="72,96,0,0" Text="TextBox" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <Button x:Name="NumbersCalculate" Content="Button" HorizontalAlignment="Left" Margin="71,120,0,0" VerticalAlignment="Top" Click="BtnNumbersCalculate_Click"/>
+        <Button x:Name="NumbersCalculate" Content="Beräkna" HorizontalAlignment="Left" Margin="71,120,0,0" VerticalAlignment="Top" Click="BtnNumbersCalculate_Click"/>
 
     </Grid>
 </Window>
