--- a/WpfApp1/App.xaml
+++ b/WpfApp1/App.xaml
@@ -1,8 +1,8 @@
-﻿<Application x:Class="Uppgift_Banken.App"
+﻿<Application x:Class="WpfApp1.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Uppgift_Banken"
-             StartupUri="Uppgift_Banken.xaml">
+             xmlns:local="clr-namespace:WpfApp1"
+             StartupUri="MainWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
